--- a/src/index.css
+++ b/src/index.css
@@ -91,7 +91,22 @@ p {
 }
 
 .extra-info {
-  text-align: center;
+	text-align: center;
+}
+
+/* Modal */
+.overlay {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100vw;
+	height: 100vh;
+	background-color: rgba(0, 0, 0, 0.15);
+	overflow: hidden;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	z-index: 10;
 }
 
 @media (max-width: 556px) {
